--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('creditcard.csv')"
+    "df = pd.read_csv('https://raw.githubusercontent.com/Sebercheres/UTS-DL/main/dataset/creditcard.csv')"
    ]
   },
   {
