--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -788,7 +788,8 @@
     "- dealing with nan values because of little data point that is missing i will use its median to impute it\n",
     "- as there is little correlation between features we do need to drop any columns and dont need to do feature engineering\n",
     "- as the target data is imbalance im going to oversample it but within the range so that the data doesnt exceed the real world data.\n",
-    "- dealing with outliar im going to replace them with max and min of the boxplot"
+    "- dealing with outliar im going to replace them with max and min of the boxplot\n",
+    "- scale down the data"
    ]
   }
  ],
