--- a/PREPROCESSING.ipynb
+++ b/PREPROCESSING.ipynb
@@ -20,6 +20,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.impute import SimpleImputer\n",
     "from imblearn.over_sampling import SMOTE\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "import warnings\n",
     "\n",
     "sns.set_theme(style=\"whitegrid\")\n",
@@ -558,12 +559,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# scale down the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = StandardScaler()\n",
+    "\n",
+    "X_train = sc.fit_transform(X_train)\n",
+    "X_val = sc.transform(X_val)\n",
+    "X_test = sc.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# export all set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = pd.DataFrame(X_train, columns=df.columns[:-1])\n",
+    "X_val = pd.DataFrame(X_val, columns=df.columns[:-1])\n",
+    "X_test = pd.DataFrame(X_test, columns=df.columns[:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
